2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/XGCairoSurface.m: Implementation of
	-[GSDisplayServer contentsOfScreen:inRect:] for x11/cairo

2011-06-22 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGServer.h: Add #include of config.h.

2011-06-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-supportsDrawGState),
	* Headers/cairo/CairoGState.h (-supportsDrawGState)
	* Source/cairo/CairoGState.m (-supportsDrawGState): Revert last
	change as gui is fixed now.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-supportsDrawGState): Delegate to gstate.
	* Headers/cairo/CairoGState.h (-supportsDrawGState): Declare this method.
	* Source/cairo/CairoGState.m (-supportsDrawGState): Only allow the
	faster drawing operation when the clip can be represented as a
	list of rectangles.
	* Source/cairo/CairoGState.m (-copyWithZone:): Always free the
	clip rectangle list.

2011-06-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/x11/XGServerWindow.h (GSMaxWMProtocols, _gswindow_device_t):
	Enlarge protocol array to make space for the _NET_WM_SYNC_REQUEST
	protocol atom.

	* Source/x11/XGServerWindow.m (_setSupportedWMProtocols:): Add
	assertion to catch out of bounds errors in the future.

2011-05-27 13:53  David Chisnall <theraven@gna.org>

	* libs/back/trunk/Source/x11/XGServerWindow.m: Call NSZoneFree() on
	  pointer allocated with NSAllocateCollectable(), not free(). This
	  is a no-op in GC mode, and will free the memory in non-GC mode.

2011-05-25  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/winlib/WIN32GState.m:
	* Source/art/ARTGState.m:
	* Source/cairo/CairoGState.m:
	* Source/xlib/XGGState.m:
	* Source/gsc/GSContext.m:
	* Source/gsc/GSGState.m:
	* Headers/gsc/GSGStateOps.h:
	Add a new interface, GSShowGlyphsWithAdvances, which replaces
	GSShowGlyphs as the primitive text drawing method.

	None of the backends implement it properly yet; I simply renamed